# NNEF-Tools

contrib/converters/tflite_converters/tflite_to_nnef/: CMakeLists.txt  README.md  main.cpp
contrib/converters/tflite_converters/tflite_to_nnef/dl/tflite/: schema_generated.h
